fixed multiple bugs with create meeting validations.  Also added scrolling to the groupMember meetings list (before they just overflowed out of the box)

--- a/myStudyGroupPlanner/static/stylesheets/styles.css
+++ b/myStudyGroupPlanner/static/stylesheets/styles.css
@@ -89,6 +89,8 @@ select {
   border-style: groove;
   border-width: 10px;
   border-color: #b54626;
+  overflow: hidden;
+  overflow-y: scroll;
 }
 
 .homeCalendar {
